// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionResult /> should render component when answer is correct 1`] = `
<div
  className="sc-bdVaJa WRZEH"
  onClick={[MockFunction]}
>
  <img
    className="sc-bwzfXH dRCBFt"
    src="check_correct.png"
  />
</div>
`;

exports[`<QuestionResult /> should render component when answer is wrong 1`] = `
<div
  className="sc-bdVaJa WRZEH"
  onClick={[MockFunction]}
>
  <img
    className="sc-bwzfXH dRCBFt"
    src="check_incorrect.png"
  />
</div>
`;
